@@ -1,3 +1,7 @@
+drkns 27.06.2016 22:43:25 +0200 - build 4728
+
+1. Продолжение экспериментальных изменений в запускателе.
+
 drkns 27.06.2016 00:46:22 +0200 - build 4727
 
 1. Продолжение экспериментальных изменений в запускателе.
